--- a/admin/src/index.html
+++ b/admin/src/index.html
@@ -91,7 +91,7 @@ Use below html tag for RTL version
 
 <body root id="kt_body">
   <div id="splash-screen">
-    <!-- <img src="./assets/media/logos/logo-dark.png" alt="Dastak logo" /> -->
+    <img src="./assets/media/logos/logo-dark.png" alt="Capri logo" />
     <svg class="splash-spinner" viewBox="0 0 50 50">
       <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
     </svg>
